puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Shell/content/Controllers/Users/UsersController.cs.pp
namespace $rootnamespace$.Controllers.Users
{
    using System.Web.Mvc;
    using Core.Interfaces.Service;

    public partial class UsersController : Controller
    {
        protected readonly IUserService UserService;

        public UsersController(IUserService userService)
        {
            UserService = userService;
        }
    }
}
